--- a/result/2021-12-29.md
+++ b/result/2021-12-29.md
@@ -41,3 +41,4 @@
 41. [原来在家也能做出西餐感](https://s.weibo.com//weibo?q=%23%E5%8E%9F%E6%9D%A5%E5%9C%A8%E5%AE%B6%E4%B9%9F%E8%83%BD%E5%81%9A%E5%87%BA%E8%A5%BF%E9%A4%90%E6%84%9F%23&Refer=top) 128247
 42. [个个都是人才的迷惑新闻](https://s.weibo.com//weibo?q=%23%E4%B8%AA%E4%B8%AA%E9%83%BD%E6%98%AF%E4%BA%BA%E6%89%8D%E7%9A%84%E8%BF%B7%E6%83%91%E6%96%B0%E9%97%BB%23&Refer=top) 119513
 43. [停不了口的香酥红薯卷](https://s.weibo.com//weibo?q=%23%E5%81%9C%E4%B8%8D%E4%BA%86%E5%8F%A3%E7%9A%84%E9%A6%99%E9%85%A5%E7%BA%A2%E8%96%AF%E5%8D%B7%23&Refer=top) 101163
+44. [西安大学生深夜收父亲千字鼓励信](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%A4%A7%E5%AD%A6%E7%94%9F%E6%B7%B1%E5%A4%9C%E6%94%B6%E7%88%B6%E4%BA%B2%E5%8D%83%E5%AD%97%E9%BC%93%E5%8A%B1%E4%BF%A1%23&Refer=top) 44029
